@@ -9,6 +9,7 @@ Phoronix Test Suite (Git)
 - pts-core: Pass test arguments to pre/interim/post test profile scripts; ESET / Michal Zatloukal patch
 - pts-core: Don't do dynamic test run counts when using system_monitor module
 - pts-core: Support reading the full terminal width using stty as tput cols doesn't seem to report anything but 80 with shell_exec()
+- phodevi: Support reading monitor vendor/model numbers when using the binary NVIDIA Linux driver
 - toggle_screensaver: Auto unload module when no display server found
 
 Phoronix Test Suite 4.8.5-Sokndal
